<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/title_color"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_go_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/title_color"
        android:paddingHorizontal="32dp"
        android:text="@string/login"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_go_to_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:paddingHorizontal="32dp"
        android:text="@string/register"
        android:textColor="@color/white" />

</LinearLayout>
