<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_card"
    android:fillViewport="true"
    tools:context=".view.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_form_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/text_view_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/registration"
                    android:textColor="@color/title_color"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="24dp"
                    android:text="@string/registration_description"
                    android:textColor="@color/description_color"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/text_view_title"
                    app:layout_constraintStart_toStartOf="@+id/text_view_title"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

                <TextView
                    android:id="@+id/text_view_label_full_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/full_name"
                    android:textColor="#003011"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_description" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_full_name"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginVertical="8dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:errorEnabled="true"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="@id/text_view_label_full_name"
                    app:layout_constraintStart_toStartOf="@id/text_view_label_full_name"
                    app:layout_constraintTop_toBottomOf="@id/text_view_label_full_name"
                    app:startIconDrawable="@drawable/ic_person_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_edit_text_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_field_background"
                        android:imeOptions="actionNext"
                        android:lines="1"
                        android:maxLength="255"
                        android:paddingVertical="16dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text_view_label_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/phone"
                    android:textColor="#003011"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_full_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_phone"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginVertical="8dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:errorEnabled="true"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="@id/text_view_label_phone_number"
                    app:layout_constraintStart_toStartOf="@id/text_view_label_phone_number"
                    app:layout_constraintTop_toBottomOf="@id/text_view_label_phone_number"
                    app:startIconDrawable="@drawable/ic_phone_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_edit_text_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_field_background"
                        android:imeOptions="actionNext"
                        android:lines="1"
                        android:maxLength="10"
                        android:paddingVertical="16dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text_view_label_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/address"
                    android:textColor="#003011"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_phone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_address"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginVertical="8dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:errorEnabled="true"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="@id/text_view_label_address"
                    app:layout_constraintStart_toStartOf="@id/text_view_label_address"
                    app:layout_constraintTop_toBottomOf="@id/text_view_label_address"
                    app:startIconDrawable="@drawable/ic_address_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_edit_text_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_field_background"
                        android:imeOptions="actionNext"
                        android:lines="1"
                        android:maxLength="10"
                        android:paddingVertical="16dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text_view_label_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/email"
                    android:textColor="#003011"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_address" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_email"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginVertical="8dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:errorEnabled="true"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="@id/text_view_label_email"
                    app:layout_constraintStart_toStartOf="@id/text_view_label_email"
                    app:layout_constraintTop_toBottomOf="@id/text_view_label_email"
                    app:startIconDrawable="@drawable/ic_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_edit_text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_field_background"
                        android:imeOptions="actionGo"
                        android:lines="1"
                        android:maxLength="255"
                        android:paddingVertical="16dp" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/title_color"
            android:paddingHorizontal="32dp"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/card_form_container"
            app:layout_constraintTop_toBottomOf="@+id/card_form_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>